@@ -725,6 +725,21 @@ public:
 		Base::setSEXP( x) ;
 		UNPROTECT(1) ;
 	}
+
+	template <typename InputIterator>
+	static Vector import( InputIterator first, InputIterator last){
+		Vector v ;
+		v.assign( first , last ) ;
+		return v ;
+	}
+
+	template <typename InputIterator, typename F>
+	static Vector import_transform( InputIterator first, InputIterator last, F f){
+		int n = std::distance( first, last ) ;
+		Vector v( n ) ;
+		std::transform( first, last, v.begin(), f) ;
+		return v ;
+	}
 	
 	template <typename T>
 	void push_back( const T& object){
